--- a/styles/style.css
+++ b/styles/style.css
@@ -1754,7 +1754,7 @@ a:focus {
 
 .contactPageMain {
   height: 55vh;
-  max-height: 700px;
+  min-height: calc(100vh - 550px);
 }
 
 .contactPageGridContainer {
@@ -1835,6 +1835,7 @@ a:focus {
   position: absolute;
   right: 5%;
   top: 230px;
+  max-width: 1200px;
   width: 60%;
 }
 
@@ -1892,6 +1893,16 @@ a:focus {
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-area: 4 / 1 / 5 / 3;
+}
+
+@media (min-width: 1800px) {
+  .contactPageGridContainer {
+    position: relative;
+  }
+  .rightContainer {
+    right: 135px;
+    top: -270px;
+  }
 }
 
 @media (max-width: 1250px) {
